# madhus.app.droppel-redered

./: AGENTS.md  Procfile  pyproject.toml  requirements.txt
.augment/config/: placeholders.env
.augment/reports/: phase0_contract_and_normalization_report.md  transcript_renderer_architecture_report.md  transcript_renderer_implementation_plan.md  transcript_renderer_infrastructure_enablement_guide.md  transcript_renderer_practical_implementation_map.md
.augment/requests/: renderer.md
app/: __init__.py  dependencies.py  errors.py  main.py  settings.py
app/core/: __init__.py  ids.py  render_artifacts.py  sample_normalization.py
app/core/contracts/: __init__.py  audio_manifest.py  base.py  branch_a_render.py  branch_c_render.py  clusters_render.py  document_manifest.py  (+1 more)
app/routes/: __init__.py  health.py  ui_shell.py
app/templates/: base.html
data/a1_tittle_tree/: sample01_a1_output_a.json  sample01_a1_output_c.json  sample02_a1_output_a.json  sample02_a1_output_b.json
data/a2_recompose_md/: sample01_a2_output_a.md  sample01_a2_output_c.md  sample02_a2_output_a.md  sample02_a2_output_b.md
data/n06_whisper/: sample01_n06_sample_output_word.json  sample02_n06_sample_output_word.json
data/p02_split_SaT/: sample01_p02_sat_split_a.json  sample01_p02_sat_split_c.json  sample01_p02_sat_split_d.json  sample02_p02_sat_split_a.json
data/p03_build_cannon_bundle/: sample01_p03_bundle_a.json  sample01_p03_bundle_b.json  sample02_p03_bundle_b.json
tests/contracts/: test_contracts.py  test_sample_normalization.py
tests/routes/: test_phase0_smoke.py
(+129 files in other folders)
