[project]
name = "madhus-app-droppel-rendered"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "gunicorn>=25.1.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "python-multipart>=0.0.22",
    "uvicorn-worker>=0.4.0",
]
